# mini_vs

./: Cargo.toml
benches/: bf16_dot_product_bench.rs  f32_dot_product_bench.rs  u8_hamming_bench.rs
src/: lib.rs  vs_engine.rs
src/vs_engine/: distance.rs  hit.rs  vector_types.rs
