[package]
name = "mini_vs"
version = "0.1.0"
edition = "2021"

[dependencies]
half = "2"
rayon = "1"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
rand = "0.9.0"
tempfile = "3.19.1"

[[bench]]
name = "f32_dot_product_bench"
harness = false

[[bench]]
name = "bf16_dot_product_bench"
harness = false

[[bench]]
name = "u8_hamming_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
